--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mobx-react": "6.1.4",
     "postcss-cli": "^7.1.0",
     "react": "^16.13.0",
+    "react-detect-offline": "^2.4.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
