--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   "jest": {
     "testEnvironment": "node",
     "collectCoverageFrom": [
-      "src/*.{ts,tsx,js,jsx}"
+      "src/SignInPage/*.{ts,tsx,js,jsx}"
     ]
   }
 }
